[tool.poetry]
name = "oopd_project"
version = "0.1.0"
description = "OOPD Project"
authors = ["Your Name <you@example.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
geopy = "^2.2.0"
pandas = "^1.3.4"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
